--- a/assets/css/style (Copia en conflicto de DESKTOP-L9REPQT 2021-08-11).css
+++ b/assets/css/style (Copia en conflicto de DESKTOP-L9REPQT 2021-08-11).css
@@ -93,6 +93,8 @@ header ul li a {
     background-attachment: fixed;
 }
 
+
+
 .main-tittle{
     height: 100vh;
     font-family: "Lato-Light";
@@ -129,7 +131,18 @@ header ul li a {
 }
 
 .main-tittle h1 span {
-    color: gold;
+    color: rgb(185, 130, 48);
+}
+
+.box-shadow{
+    width: 30%;
+    height: 20%;
+    background-color: rgba(212, 211, 211, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 5%;
 }
 
 nav.social-nav ul{
@@ -291,12 +304,6 @@ nav.social-nav ul li img {
     /* background-color: red; */
 }
 
-.menace-text {
-    font-size: 30px;
-    color: white;
-    font-weight: bold;
-}
-
 .text-boxes-square{
     font-size: 15px;
     color: white;
@@ -319,17 +326,17 @@ nav.social-nav ul li img {
 
 }
 
-.right-p-1 {
+.right h5{
     color: #eab104;
 }
 
-.right-p-2 {
+.right h1 {
     margin-top: 2%;
     font-size: 35px;
     font-weight: bolder;
 }
 
-.right-p-3 {
+.right p{
     margin: 5% 0%;
     line-height: 20px;
 }
@@ -379,26 +386,6 @@ nav.social-nav ul li img {
         height: 30px;
         font-size: 14px;
     
-    }
-
-    .menace-text {
-        font-size: 15px;
-    }
-
-    .text-boxes-square{
-        font-size: 10px;
-    }
-
-    .right-p-1 {
-        font-size: 10px;
-    }
-    
-    .right-p-2 {
-        font-size: 20px;
-    }
-    
-    .right-p-3 {
-        font-size: 10px;
     }
 
 }
@@ -516,20 +503,6 @@ nav.social-nav ul li img {
     }
 }
 
-@media (max-width: 580px) {
-
-    .first-part h5{
-        margin-top: 3%;
-    }
-
-    .p-first{
-        font-size: 20px;
-    }
-
-    .write{
-       font-size: 10px;
-    }
-}
 
 
 
@@ -590,7 +563,7 @@ nav.social-nav ul li img {
 
 .fourth-right{
     width: 35%;
-    height: 85%; 
+    height: 70%; 
     /* background-color: blue; */
     display: grid;
     grid-template-columns: 50% 50% ;
@@ -601,7 +574,7 @@ nav.social-nav ul li img {
 }
 
 .boxing{
-    height: 98%;
+    height: 95%;
     /*background-color: red;
     */background-color: rgba(223, 219, 219, 0.2);
     border-radius:10% ;
@@ -620,7 +593,7 @@ nav.social-nav ul li img {
 }
 
 .boxing-p{
-    font-size: 19px;
+    font-size: 20px;
     font-weight:550;
     margin-left: 2%;
 }
