--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,11 +130,7 @@ header ul li a {
 }
 
 .main-tittle h1 span {
-    /* -webkit-text-stroke: 0.1px black; */
     color: gold;
-    /* font-weight: 900; */
-    /* -webkit-text-fill-color:#eab104;
-    -webkit-text-stroke: 0.1px black; */
 }
 
 nav.social-nav ul{
@@ -212,8 +208,6 @@ nav.social-nav ul li img {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    /* background-color: blue; */
-
 }
 
 .square{
@@ -222,7 +216,6 @@ nav.social-nav ul li img {
     display: flex;
     justify-content: center;
     color: lightgray;
-    /* background-color: red; */
 }
 
 .square:hover{
@@ -255,7 +248,6 @@ nav.social-nav ul li img {
     margin-top: 5%;
     width: 80%;
     height: 85%;
-    /* background-color: red; */
     display: flex;
 }
 
@@ -264,7 +256,6 @@ nav.social-nav ul li img {
 .left{
    width: 50%;
    height: 100%; 
-   /* background-color: blue; */
    display: flex;
    justify-content: center;
 }
@@ -273,7 +264,6 @@ nav.social-nav ul li img {
     width: 80%;
     height: 80px;
     border: 1px solid white;
-    /* background-color: red; */
     margin: 7% 1% ;
     display: flex;
     align-items: center;
@@ -283,7 +273,6 @@ nav.social-nav ul li img {
 .img-boxes-square{
     margin: 8%;
     width: 10%;
-    /* background-color: red; */
 }
 
 .menace{
@@ -293,7 +282,6 @@ nav.social-nav ul li img {
     align-items:flex-start;
     justify-content:center;    
     flex-direction: column;
-    /* background-color: red; */
 }
 
 .menace-text {
@@ -320,8 +308,6 @@ nav.social-nav ul li img {
     height: 58%; 
     color: white;
     margin: 2% 1% ;
-    /* background-color: gray; */
-
 }
 
 .right-p-1 {
@@ -426,7 +412,6 @@ nav.social-nav ul li img {
     display: flex;
     align-items: center;
     flex-direction: column;
-    /* background-color: red; */
 }
 
 .first-part{
@@ -434,7 +419,6 @@ nav.social-nav ul li img {
     display: flex;
     align-items: center;
     flex-direction: column;
-    /* background-color: blue; */
 }
 
 .first-part h5{
@@ -448,7 +432,6 @@ nav.social-nav ul li img {
     font-size: 35px;
     font-weight: 900;
     color: white;
-    /* background-color: blue; */
 }
 
 .write{
@@ -457,7 +440,6 @@ nav.social-nav ul li img {
     margin: 1% 0%;
     line-height: 20px;
     color: darkgray;
-    /* background-color: red; */
     text-align: center;
 }
 
@@ -468,7 +450,6 @@ nav.social-nav ul li img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: red; */
 }
 
 .boxer-1 {
@@ -552,7 +533,6 @@ nav.social-nav ul li img {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-color: red; */
 }
 
 
@@ -569,9 +549,7 @@ nav.social-nav ul li img {
     height: 50%; 
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     flex-direction: column;
-    /* background-color: red; */
 }
 
 .one-p{
@@ -596,19 +574,14 @@ nav.social-nav ul li img {
 .fourth-right{
     width: 35%;
     height: 85%; 
-    /* background-color: blue; */
     display: grid;
     grid-template-columns: 50% 50% ;
-    /* grid-template-rows: 100px 150px; */
-    /* row-gap: 10%; */
     column-gap:5%;
-    /* margin-left: 6%; */
 }
 
 .boxing{
     height: 98%;
-    /*background-color: red;
-    */background-color: rgba(223, 219, 219, 0.2);
+    background-color: rgba(223, 219, 219, 0.2);
     border-radius:10% ;
 }
 
@@ -995,14 +968,64 @@ nav.social-nav ul li img {
 .sixth-section {
     height: 30vh;
     background-color:#1A1919;
+    background-image: url("../img/sixth/landscape.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
 }
 
 
 
+.container-sixth {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
 
+.sixth-left {
+    width: 40%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 10%;
+}
 
+.left-1 {
+    color: #eab104;
+    font-size: 25px;
+    font-weight: 900;
+}
 
+.left-2 {
+    -webkit-text-stroke: 0.2px darkgray;
+    color: white;
+    font-size: 40px;
+    font-weight: 900;
+    margin-top: 1%;
+    
+}
 
+.left-3 {
+    color:#3f3e3e;
+    font-size: 20px;
+    font-weight: 900;
+    margin-top: 1%;
+}
+
+.sixth-right {
+    width: 40%;
+    height: 60%;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
