--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -972,7 +972,6 @@ nav.social-nav ul li img {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     position: relative;
 }
 
@@ -985,6 +984,7 @@ nav.social-nav ul li img {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+
 }
 
 .sixth-left {
@@ -1021,12 +1021,121 @@ nav.social-nav ul li img {
 .sixth-right {
     width: 40%;
     height: 60%;
-    background-color: blue;
+    /* background-color: blue; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.input-email {
+    font-size: 30px;
+    font-weight: 800;
+    color: black;
+    /* background-color: red; */
+}
+
+.elementor-field {
+    width: 50%;
+    height: 30%;
+    background-color: #1A1919;
+    color: darkgrey;
+}
+
+.button-sixth {
+ width: 30%;
+ height: 30%;
+ margin-left: 2%;
+ border: 1px solid #eab104;
+ background-color: transparent;
+ font-size: 15px;
+ transition: background-color 0.5s ;
+}
+
+.button-sixth:hover{
+    background-color: rgba(0,0,0,0.3);
+}
+
+
+@media (max-width: 1000px) {
+
+    .left-1 {
+        font-size: 20px;
+    }
+
+    .left-2 {
+        font-size: 30px;
+    }
+
+    .left-3 {
+        font-size: 15px;
+    }
+
+    .elementor-field {
+        font-size: 20px;
+    }
+
+    .button-sixth {
+        font-size: 12px;
+    }
+
+}
+
+
+
+@media (max-width: 580px) {
+
+    .left-1 {
+        font-size: 15px;
+    }
+
+    .left-2 {
+        font-size: 25px;
+    }
+
+    .left-3 {
+        font-size: 10px;
+    }
+
+    .elementor-field {
+        font-size: 10px;
+    }
+
+    .button-sixth {
+        font-size: 10px;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+/* <-------------------> */
+/* <-------------------> */
+/* <-------------------> */
+   /* SEVENTH SECTION */
+/* <-------------------> */
+/* <-------------------> */
+/* <-------------------> */
+
+
+
+
+
+
+
+/* <-------------------> */
+/* <-------------------> */
+/* <-------------------> */
+    /* FINAL SECTION */
+/* <-------------------> */
+/* <-------------------> */
+/* <-------------------> */
 
 
 
