--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1013,7 +1013,7 @@ nav.social-nav ul li img {
 
 .left-3 {
     color:#3f3e3e;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 900;
     margin-top: 1%;
 }
@@ -1021,7 +1021,6 @@ nav.social-nav ul li img {
 .sixth-right {
     width: 40%;
     height: 60%;
-    /* background-color: blue; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1031,7 +1030,6 @@ nav.social-nav ul li img {
     font-size: 30px;
     font-weight: 800;
     color: black;
-    /* background-color: red; */
 }
 
 .elementor-field {
@@ -1084,6 +1082,10 @@ nav.social-nav ul li img {
 
 @media (max-width: 580px) {
 
+    .container-sixth {
+        flex-direction: column;
+    }
+
     .left-1 {
         font-size: 15px;
     }
@@ -1093,7 +1095,8 @@ nav.social-nav ul li img {
     }
 
     .left-3 {
-        font-size: 10px;
+        font-size: 15px;
+        color: black;
     }
 
     .elementor-field {
