--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,12 @@ nav.social-nav ul li img {
     
     }
 
+    .main-tittle h1 {
+        font-weight: bold;
+        font-size: 2.6rem;
+        
+    }
+
 }
 
 
