--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1309,9 +1309,12 @@ nav.social-nav ul li img {
 }
 
 
+@media (max-width: 700px) {
 
-
-
+    .final-1 {
+        font-size: 10px;
+     }
+}
 
 
 
