--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,11 +93,17 @@ header ul li a {
         color: white;
         background-color: transparent;
         border-radius:10% ;
+        width: 30px;
+        height: 30px;
+    }
+
+    .img-menu {
+        width: 100%;
     }
 
     .menu {
         width: 60px;
-        height: 130px;
+        height: 140px;
         background-color: black;
         position: absolute;
         top: -25%;
@@ -113,7 +119,7 @@ header ul li a {
     }
 
     .menu.open {
-        top: 0.7%;
+        top: 1%;
     }
 
 }
@@ -500,6 +506,8 @@ nav.social-nav ul li img {
     text-align: center;
 }
 
+
+
 .box-img {
     width: 80%;
     height: 20%;
@@ -509,10 +517,12 @@ nav.social-nav ul li img {
     align-items: center;
 }
 
+
+
 .boxer-1 {
     width: 95%;
 }
-   
+ 
 .boxer-2{
     width: 95%;
     
@@ -1087,21 +1097,15 @@ nav.social-nav ul li img {
     align-items: center;
 }
 
-.input-email {
-    font-size: 30px;
-    font-weight: 800;
-    color: black;
-}
-
 .elementor-field {
-    width: 50%;
+    width: 100%;
     height: 30%;
     background-color: #1A1919;
     color: darkgrey;
 }
 
 .button-sixth {
- width: 30%;
+ width: 60%;
  height: 30%;
  margin-left: 2%;
  border: 1px solid #eab104;
@@ -1162,11 +1166,17 @@ nav.social-nav ul li img {
         color: black;
     }
 
+    .sixth-right {
+        flex-direction: column;
+    }
+
     .elementor-field {
+        width: 150%;
         font-size: 10px;
     }
 
     .button-sixth {
+        width: 100%;
         font-size: 8px;
     }
 
