--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,8 +109,8 @@ header ul li a {
         top: -25%;
         right: 2%;
         border-radius: 5%;
+        transition: all 0.5s ease;
     }
-
 
     .ul-menu {
         display: flex;
